# postgres-querybuilder

./: Cargo.toml  docker-compose.yml  readme.md
.github/workflows/: doc.yml  main.yml
src/: bucket.rs  lib.rs  prelude.rs  select_builder.rs  update_builder.rs
