[package]
name = "postgres-querybuilder"
description = "A simple tool to help you build your postgres queries easily"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["postgres", "querybuilder"]
readme = "readme.md"
repository = "https://github.com/jdrouet/postgres-querybuilder/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = "0.1"
